prow/asm/tester/configs/user-auth/squid.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: squid
  name: squid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squid
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: squid
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - image: gcr.io/asm-staging-images/mirror/squid
        name: squid
        command: ['/usr/sbin/squid']
        args: ['-f', '/etc/squid/squid.conf', '--foreground']
        livenessProbe:
          exec:
            command:
            - sh
            - -exc
            - "squidclient -T 3 https://kubernetes.io/docs/home/ | grep -qF '200 OK'"
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - 'apk add --no-cache curl && curl -s -o /dev/null -w "%{http_code}" http://localhost:3128/squid-internal-mgr/info | grep "200"'
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: ssl-certs
          mountPath: "/etc/squid/cert"
        - name: squid-cache
          mountPath: "/var/cache/squid"
        - name: squid-conf
          mountPath: /etc/squid/squid.conf
          subPath: squid.conf
      volumes:
      - name: squid-conf
        configMap:
          name: squid
      - name: ssl-certs
        configMap:
          name: squid-cert
      - name: squid-cache
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: squid
  name: squid
spec:
  ports:
  - name: 3128-3128
    port: 3128
    protocol: TCP
    targetPort: 3128
  - name: 3129-3129
    port: 3129
    protocol: TCP
    targetPort: 3129
  selector:
    app: squid
  type: ClusterIP
