prow/asm/tester/configs/user-auth/httpbin-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: userauth-test
spec:
  gateways:
    - asm-user-auth/userauth
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /ip
        - uri:
            prefix: /headers
      name: httpbin-routes
      route:
        - destination:
            host: httpbin.userauth-test.svc.cluster.local
            port:
              number: 8000
